--- a/com.github.rytina.udigger.orientdb/build.properties
+++ b/com.github.rytina.udigger.orientdb/build.properties
@@ -32,4 +32,9 @@ bin.includes = META-INF/,\
                libs/sesame-model-2.6.2.jar,\
                libs/sesame-query-2.6.4.jar,\
                libs/sesame-rio-api-2.6.4.jar,\
-               libs/sesame-sail-api-2.6.4.jar
+               libs/sesame-sail-api-2.6.4.jar,\
+               libs/blueprints-graph-jung-2.2.0.jar,\
+               libs/jung-algorithms-2.0.1.jar,\
+               libs/jung-api-2.0.1.jar,\
+               libs/jung-visualization-2.0.1.jar,\
+               libs/collections-generic-4.01.jar
